@@ -1695,6 +1695,16 @@ name|String
 argument_list|>
 name|nonStoredDVsUsedAsStored
 decl_stmt|;
+comment|/** Contains the names/patterns of all docValues=true,stored=false fields, excluding those that are copyField targets in the schema. */
+DECL|field|nonStoredDVsWithoutCopyTargets
+specifier|private
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|nonStoredDVsWithoutCopyTargets
+decl_stmt|;
 DECL|field|storedHighlightFieldNames
 specifier|private
 name|Collection
@@ -2834,6 +2844,18 @@ name|HashSet
 argument_list|<>
 argument_list|()
 decl_stmt|;
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|nonStoredDVsWithoutCopyTargets
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
 name|this
 operator|.
 name|fieldInfos
@@ -2909,6 +2931,27 @@ operator|.
 name|name
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|schema
+operator|.
+name|isCopyFieldTarget
+argument_list|(
+name|schemaField
+argument_list|)
+condition|)
+block|{
+name|nonStoredDVsWithoutCopyTargets
+operator|.
+name|add
+argument_list|(
+name|fieldInfo
+operator|.
+name|name
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 name|this
@@ -2931,6 +2974,17 @@ operator|.
 name|unmodifiableSet
 argument_list|(
 name|allNonStoredDVs
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|nonStoredDVsWithoutCopyTargets
+operator|=
+name|Collections
+operator|.
+name|unmodifiableSet
+argument_list|(
+name|nonStoredDVsWithoutCopyTargets
 argument_list|)
 expr_stmt|;
 comment|// We already have our own filter cache
@@ -5393,6 +5447,20 @@ condition|?
 name|nonStoredDVsUsedAsStored
 else|:
 name|allNonStoredDVs
+return|;
+block|}
+comment|/**    * Returns an unmodifiable set of names of non-stored docValues fields, except those that are targets of a copy field.    */
+DECL|method|getNonStoredDVsWithoutCopyTargets
+specifier|public
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|getNonStoredDVsWithoutCopyTargets
+parameter_list|()
+block|{
+return|return
+name|nonStoredDVsWithoutCopyTargets
 return|;
 block|}
 comment|/* ********************** end document retrieval *************************/
