@@ -7869,6 +7869,311 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testAtomicUpdatesOnNonStoredDocValuesCopyField
+specifier|public
+name|void
+name|testAtomicUpdatesOnNonStoredDocValuesCopyField
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|101
+argument_list|,
+literal|"title"
+argument_list|,
+literal|"title2"
+argument_list|,
+literal|"single_i_dvn"
+argument_list|,
+literal|100
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|102
+argument_list|,
+literal|"title"
+argument_list|,
+literal|"title3"
+argument_list|,
+literal|"single_d_dvn"
+argument_list|,
+literal|3.14
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|103
+argument_list|,
+literal|"single_s_dvn"
+argument_list|,
+literal|"abc"
+argument_list|,
+literal|"single_i_dvn"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Do each one twice... the first time it will be retrieved from the index, and the second time from the transaction log.
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|2
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|101
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newtitle2"
+argument_list|)
+argument_list|,
+literal|"single_i_dvn"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|102
+argument_list|,
+literal|"title"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"newtitle3"
+argument_list|)
+argument_list|,
+literal|"single_d_dvn"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|103
+argument_list|,
+literal|"single_i_dvn"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"inc"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:101"
+argument_list|)
+argument_list|,
+literal|"/response/docs/[0]/id==101"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newtitle2'"
+argument_list|,
+literal|"/response/docs/[0]/single_i_dvn==102"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:102"
+argument_list|)
+argument_list|,
+literal|1e-4
+argument_list|,
+literal|"/response/docs/[0]/id==102"
+argument_list|,
+literal|"/response/docs/[0]/title/[0]=='newtitle3'"
+argument_list|,
+literal|"/response/docs/[0]/single_d_dvn==5.14"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:103"
+argument_list|)
+argument_list|,
+literal|"/response/docs/[0]/id==103"
+argument_list|,
+literal|"/response/docs/[0]/single_s_dvn=='abc'"
+argument_list|,
+literal|"/response/docs/[0]/single_i_dvn==3"
+argument_list|)
+expr_stmt|;
+comment|// test that non stored docvalues was carried forward for a non-docvalue update
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|103
+argument_list|,
+literal|"single_s_dvn"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|"abcupdate"
+argument_list|)
+argument_list|,
+literal|"single_i_dvn"
+argument_list|,
+name|ImmutableMap
+operator|.
+name|of
+argument_list|(
+literal|"set"
+argument_list|,
+literal|5
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:103"
+argument_list|)
+argument_list|,
+literal|"/response/docs/[0]/id==103"
+argument_list|,
+literal|"/response/docs/[0]/single_s_dvn=='abcupdate'"
+argument_list|,
+literal|"/response/docs/[0]/single_i_dvn==5"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testInvalidOperation
 specifier|public
 name|void
